version 1.0-beta - XX-XXX-2011
. [NEW-MAC]: Added CC_DIRECTOR_INIT(). It is possible to create a Mac Window programatically
. [NEW-MAC]: EventDispatcher: Added support for touches events
. [FIX-MAC]: EventDispatcher: flagsChanged is triggered correctly (issue #1066)
. [FIX-MAC]: EventDispatcher: queue & dispatch events are synced (issue #1083)
. [FIX-MAC]: LabelTTF: alignment works OK (issue #1073)
. [FIX-MAC]: Menu: Menu doesn't hang up with invisible menus (issue #1070)
. [FIX-MAC]: Templates includes AudioToolbox and OpenAL frameworks

version 0.99.5 - 16-Dec-2010
. [NEW] All: small performance improvements in all the code
. [NEW] Layer: Added gradient layer
. [NEW] MenuItem: it also supports class methods
. [NEW] SpriteFrameCache: added method to load a plist file with a texture file name
. [NEW] Texture: It is possible to use a subclass like MutableTexture without modifying the code
. [NEW-MAC] Added Mac templates
. [NEW-MAC] Added "flagsChanged" keyboard event
. [NEW-MAC] Added support for Fullscreen / window mode
. [NEW-MAC] Added support for AutoScale if the window is resized / fullscreen (EXPERIMENTAL)
. [FIX] All: Misc cleanups in the code
. [FIX] Action: Blink restores doesn't set as invisible the frame when the action is done (issue #1061)
. [FIX] Camera: uses points intead of pixels. Works OK in RetinaDisplay mode (issue #1023)
. [FIX] CCArray: fixed possible crash
. [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
. [FIX] Director: Fixed possible memory leak when popping a scene.
. [FIX] FileUtils: loads .gz / .ccz files correctly in RetinaDisplay mode (issue #1037)
. [FIX] FileUtils: fixed big memory leaks on .ccz inflater
. [FIX] FileUtils: removes -hd suffix if the filename already has it (issue #1040)
. [FIX] Node: udpated doxygen strings regarding default anchorPoint (issue #1049)
. [FIX] Sprite: updateTransform can be overriden (issue #824)