@@ -226,18 +226,18 @@
  
  To enable set it to a value different than 0. Disabled by default.
  */
-#define CC_SPRITE_DEBUG_DRAW 1
+#define CC_SPRITE_DEBUG_DRAW 0
 
 /** @def CC_SPRITEBATCHNODE_DEBUG_DRAW
- If enabled, all subclasses of CCSprite that are rendered using an CCSpriteSheet draw a bounding box.
+ If enabled, all subclasses of CCSprite that are rendered using an CCSpriteBatchNode draw a bounding box.
  Useful for debugging purposes only. It is recommened to leave it disabled.
  
  To enable set it to a value different than 0. Disabled by default.
  */
-#define CC_SPRITEBATCHNODE_DEBUG_DRAW 1
+#define CC_SPRITEBATCHNODE_DEBUG_DRAW 0
 
 /** @def CC_BITMAPFONTATLAS_DEBUG_DRAW
- If enabled, all subclasses of BitmapFontAtlas will draw a bounding box
+ If enabled, all subclasses of CCLabelBMFont will draw a bounding box
  Useful for debugging purposes only. It is recommened to leave it disabled.
  
  To enable set it to a value different than 0. Disabled by default.
@@ -245,7 +245,7 @@
 #define CC_LABELBMFONT_DEBUG_DRAW 0
 
 /** @def CC_LABELBMFONT_DEBUG_DRAW
- If enabled, all subclasses of LabeltAtlas will draw a bounding box
+ If enabled, all subclasses of CCLabeltAtlas will draw a bounding box
  Useful for debugging purposes only. It is recommened to leave it disabled.
  
  To enable set it to a value different than 0. Disabled by default.
