@@ -1,6 +1,7 @@
 version 1.0-beta - XX-XXX-2011
 . [NEW-MAC]: Added CC_DIRECTOR_INIT(). It is possible to create a Mac Window programatically
 . [NEW-MAC]: EventDispatcher: Added support for touches events
+. [FIX]: Sprite: flipx/flipy don't modify the contentSize (issue #1073)
 . [FIX-MAC]: EventDispatcher: flagsChanged is triggered correctly (issue #1066)
 . [FIX-MAC]: EventDispatcher: queue & dispatch events are synced (issue #1083)
 . [FIX-MAC]: LabelTTF: alignment works OK (issue #1073)
